[package]
name = "Healthcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4.0"
reqwest = {version = "0.11.18", features = ["blocking"] }
tokio = { version = "1.15", features = ["full"] }